Update group links to W3C DBWG database

--- a/index.html
+++ b/index.html
@@ -175,17 +175,17 @@
             </li>
             <li>
               <a href=
-              "https://www.w3.org/2000/09/dbwg/details?group=xxxxx&amp;public=1&amp;gs=1&amp;">
+              "https://www.w3.org/2000/09/dbwg/details?group=115198&amp;public=1&amp;gs=1&amp;">
               Group Participants</a>
             </li>
             <li>
               <a href=
-              "https://www.w3.org/2004/01/pp-impl/xxxxx/status">Royalty-Free
+              "https://www.w3.org/2004/01/pp-impl/115198/status">Royalty-Free
               Patent Policy</a>
             </li>
             <li>
               <a title="Join the Media Working Group" href=
-              "https://www.w3.org/2004/01/pp-impl/xxxxx/join">Join This
+              "https://www.w3.org/2004/01/pp-impl/115198/join">Join This
               Group</a>
             </li>
           </ul>
@@ -221,7 +221,7 @@
                 &lt;<a href="mailto:fd@w3.org">fd@w3.org</a>&gt;.
               </p>
               <p>Also see the <a href=
-              "https://www.w3.org/2000/09/dbwg/details?group=xxxxx&amp;public=1&amp;gs=1&amp;">list of participants</a>.</p>
+              "https://www.w3.org/2000/09/dbwg/details?group=115198&amp;public=1&amp;gs=1&amp;">list of participants</a>.</p>
             </article>
             <article id="how">
               <h2>Get involved</h2>
