Drop Identi.ca from footer (no longer used)

--- a/index.html
+++ b/index.html
@@ -303,10 +303,7 @@
               <a href="https://twitter.com/W3C" title=
               "Follow W3C on Twitter"><img src=
               "https://www.w3.org/2008/site/images/twitter-bird" alt="Twitter"
-              class="social-icon" width="39" height="42"></a> <a href=
-              "https://identi.ca/w3c" title="See W3C on Identica"><img src=
-              "https://www.w3.org/2008/site/images/identica-logo" alt=
-              "Identica" class="social-icon" width="46" height="42"></a>
+              class="social-icon" width="39" height="42"></a>
             </li>
           </ul>
         </div><!-- #footer address / page signature -->
