Substituted "client-side" for "cliend-side"

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <h2>What we do</h2>
               <p>
                 The goal of the Media Working Group is to develop and improve
-                cliend-side media processing and playback features on the Web.
+                client-side media processing and playback features on the Web.
                 Learn more about the <a href=
                 "https://www.w3.org/2019/05/media-wg-charter.html">goals,
                 scope, and deliverables</a>.
