Add links to spec repos on home page and main README

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       border-radius: 8px;
       -moz-border-radius: 8px;
       padding: 0.1em 0.1em 0.1em 0.5em;
-      list-item-style: bullet;
+      list-style: bullet;
     }
 
     .infobar ul {
@@ -189,7 +189,32 @@
               Group</a>
             </li>
           </ul>
-          <br>
+          <h3 class="category">
+            <span class="ribbon"><b>Specifications</b></span>
+          </h3>
+          <ul class="theme">
+            <li>
+              <a href="https://github.com/w3c/autoplay/">Autoplay Policy Detection</a>
+            </li>
+            <li>
+              <a href="https://w3c.github.io/encrypted-media/">Encrypted Media Extensions (EME)</a>
+            </li>
+            <li>
+              <a href="https://w3c.github.io/media-capabilities/">Media Capabilities</a>
+            </li>
+            <li>
+              <a href="https://w3c.github.io/media-playback-quality/">Media Playback Quality</a>
+            </li>
+            <li>
+              <a href="https://w3c.github.io/mediasession/">Media Session</a>
+            </li>
+            <li>
+              <a href="https://w3c.github.io/media-source/">Media Source Extensions™ (MSE)</a>
+            </li>
+            <li>
+              <a href="https://w3c.github.io/picture-in-picture/">Picture-in-picture</a>
+            </li>
+          </ul>
         </nav>
         <div class="w3c_mainCol">
           <h1 class="title">
