Add link to upcoming meeting page

--- a/index.html
+++ b/index.html
@@ -248,13 +248,20 @@
               <p>Also see the <a href=
               "https://www.w3.org/2000/09/dbwg/details?group=115198&amp;public=1&amp;gs=1&amp;">list of participants</a>.</p>
             </article>
+            <article id="meetings">
+              <h2>Meetings</h2>
+              <p>
+                <a href="https://www.w3.org/wiki/Media_WG/TPAC/2019">Kick-off face-to-face meeting</a> planned on 19-20 September 2019 during W3C's annual Technical Plenary Advisory Committee (TPAC) event.
+              </p>
+            </article>
             <article id="how">
               <h2>Get involved</h2>
               <p>
                 This group works in public. We welcome comments and discussion
                 from the web community, on <a href="https://github.com/w3c/media-wg">GitHub</a> and our
                 mailing-list <a href="mailto:public-media-wg@w3.org">public-media-wg@w3.org</a>
-                (<a href="https://lists.w3.org/Archives/Public/public-media-wg/">publicly archived</a>).
+                (<a href="https://lists.w3.org/Archives/Public/public-media-wg/">publicly archived</a>).<br/>
+                Notes get taken during meetings on IRC: <a href="irc://irc.w3.org:6665#mediawg">irc.w3.org:6665#mediawg</a> / <a href="http://irc.w3.org/?channels=#mediawg">IRC web client</a>
               </p>
             </article>
           </div>
