Move TPAC meeting to past, mention monthly calls

--- a/index.html
+++ b/index.html
@@ -250,9 +250,13 @@
             </article>
             <article id="meetings">
               <h2>Meetings</h2>
-              <p>
-                <a href="https://www.w3.org/wiki/Media_WG/TPAC/2019">Kick-off face-to-face meeting</a> planned on 19-20 September 2019 during W3C's annual Technical Plenary Advisory Committee (TPAC) event.
-              </p>
+
+              <p>The group settled on a monthly call cadence. Day and time of these calls are still to be determined.</p>
+
+              <p>The group meets face-to-face at least once per year during W3C's annual Technical Plenary Advisory Committee (TPAC). Additional face-to-face meetings may be organized. Past face-to-face meetings:</p>
+              <ul class="show_items">
+                <li><a href="https://www.w3.org/wiki/Media_WG/TPAC/2019">Kick-off face-to-face meeting</a> during W3C's annual Technical Plenary Advisory Committee (TPAC) event on 19-20 September 2019</li>
+              </ul>
             </article>
             <article id="how">
               <h2>Get involved</h2>
