Add links to GitHub repositories and issue trackers

--- a/index.html
+++ b/index.html
@@ -262,11 +262,36 @@
               <h2>Get involved</h2>
               <p>
                 This group works in public. We welcome comments and discussion
-                from the web community, on <a href="https://github.com/w3c/media-wg">GitHub</a> and our
-                mailing-list <a href="mailto:public-media-wg@w3.org">public-media-wg@w3.org</a>
-                (<a href="https://lists.w3.org/Archives/Public/public-media-wg/">publicly archived</a>).<br/>
-                Notes get taken during meetings on IRC: <a href="irc://irc.w3.org:6665#mediawg">irc.w3.org:6665#mediawg</a> / <a href="http://irc.w3.org/?channels=#mediawg">IRC web client</a>
+                from the web community on our mailing-list <a href="mailto:public-media-wg@w3.org">public-media-wg@w3.org</a>
+                (<a href="https://lists.w3.org/Archives/Public/public-media-wg/">publicly archived</a>) and, preferably, through issues in one of the group's GitHub repositories, where most of the work happens:<br/>
               </p>
+              <dl class="show_items">
+                <dt><a href="https://github.com/w3c/media-wg/">w3c/media-wg</a> / <a href="https://github.com/w3c/media-wg/issues">issues</a></dt>
+                <dd>The group's home page. Issues used to track group-wide discussions</dd>
+
+                <dt><a href="https://github.com/w3c/autoplay/">w3c/autoplay</a> / <a href="https://github.com/w3c/autoplay/issues">issues</a></dt>
+                <dd>Repository of the Autoplay Policy Detection specification</dd>
+
+                <dt><a href="https://github.com/w3c/encrypted-media/">w3c/encrypted-media</a> / <a href="https://github.com/w3c/encrypted-media/issues">issues</a></dt>
+                <dd>Repository of the Encrypted Media Extensions (EME) specification</dd>
+
+                <dt><a href="https://github.com/w3c/media-capabilities/">w3c/media-capabilities</a> / <a href="https://github.com/w3c/media-capabilities/issues">issues</a></dt>
+                <dd>Repository of the Media Capabilities specification</dd>
+
+                <dt><a href="https://github.com/w3c/media-playback-quality/">w3c/media-playback-quality</a> / <a href="https://github.com/w3c/media-playback-quality/issues">issues</a></dt>
+                <dd>Repository of the Media Playback Quality specification</dd>
+
+                <dt><a href="https://github.com/w3c/mediasession/">w3c/mediasession</a> / <a href="https://github.com/w3c/mediasession/issues">issues</a></dt>
+                <dd>Repository of the Media Session specification</dd>
+
+                <dt><a href="https://github.com/w3c/media-source/">w3c/media-source</a> / <a href="https://github.com/w3c/media-source/issues">issues</a></dt>
+                <dd>Repository of the Media Source Extensions (MSE) specification</dd>
+
+                <dt><a href="https://github.com/w3c/picture-in-picture/">w3c/picture-in-picture</a> / <a href="https://github.com/w3c/picture-in-picture/issues">issues</a></dt>
+                <dd>Repository of the Picture-in-picture specification</dd>
+              </dl>
+
+              <p>Notes get taken during meetings on IRC: <a href="irc://irc.w3.org:6665#mediawg">irc.w3.org:6665#mediawg</a> / <a href="http://irc.w3.org/?channels=#mediawg">IRC web client</a></p>
             </article>
           </div>
         </div>
