Update meetings and agenda info

--- a/index.html
+++ b/index.html
@@ -251,12 +251,35 @@
             <article id="meetings">
               <h2>Meetings</h2>
 
-              <p>The group settled on a monthly call cadence. Day and time of these calls are still to be determined.</p>
+              <p>The group settled on a monthly call cadence, every second Tuesday of each month, with alternating times:</p>
+              <dl>
+                <dt><em>Odd months</em></dt>
+                <dd>
+                  January, March, May, July, September, November<br/>
+                  <b>14:00 Pacific time</b> (see <a href="https://www.timeanddate.com/worldclock/converter.html?p1=234&p2=43&p3=136&p4=195&p5=33&p6=248&p7=5&p8=240">world clock</a>)<br/>
+                </dd>
+                <dt><em>Even months</em></dt>
+                <dd>
+                  February, April, June, August, October, December<br/>
+                  <b>07:00 Pacific time</b> (see <a href="https://www.timeanddate.com/worldclock/converter.html?p1=234&p2=43&p3=136&p4=195&p5=33&p6=248&p7=5&p8=240">world clock</a>)
+                </dd>
+              </dl>
+
+              <p><a href="https://lists.w3.org/Archives/Member/w3c-archive/2020Jan/0323.html">Call information</a> (member-only link) is the same for all meetings. Note calls are canceled when there are no <a href="#agenda">agenda items</a> to discuss.</p>
 
               <p>The group meets face-to-face at least once per year during W3C's annual Technical Plenary Advisory Committee (TPAC). Additional face-to-face meetings may be organized. Past face-to-face meetings:</p>
               <ul class="show_items">
                 <li><a href="https://www.w3.org/wiki/Media_WG/TPAC/2019">Kick-off face-to-face meeting</a> during W3C's annual Technical Plenary Advisory Committee (TPAC) event on 19-20 September 2019</li>
               </ul>
+            </article>
+            <article id="agenda">
+              <h2>Meetings agenda</h2>
+              <p>
+                The agenda is built from GitHub issues tagged with an <code style="display: inline-block; padding: 0.3em; border-radius: 3px; background-color: #b60205; color: white">agenda</code> label in the group's repositories (see <a href="#how">list below</a>). Group participants are encouraged to label issues that they would like to discuss accordingly. If something cannot easily be expressed as a GitHub issue, or if you find yourself unable to add a label, please reach out to the chairs and/or team contact.
+              </p>
+              <p>
+                Chairs send the agenda and call information &mdash;or a cancelation notice&mdash;, through email on the group's public mailing-list at least one day before the call.
+              </p>
             </article>
             <article id="how">
               <h2>Get involved</h2>
