Drop link to world clock
There is no easy way to get the right info directly, the clock would just
display today's day at midnight Pacific time, which looked rather confusing.

--- a/index.html
+++ b/index.html
@@ -256,12 +256,12 @@
                 <dt><em>Odd months</em></dt>
                 <dd>
                   January, March, May, July, September, November<br/>
-                  <b>14:00 Pacific time</b> (see <a href="https://www.timeanddate.com/worldclock/converter.html?p1=234&p2=43&p3=136&p4=195&p5=33&p6=248&p7=5&p8=240">world clock</a>)<br/>
+                  <b>14:00 Pacific time</b>
                 </dd>
                 <dt><em>Even months</em></dt>
                 <dd>
                   February, April, June, August, October, December<br/>
-                  <b>07:00 Pacific time</b> (see <a href="https://www.timeanddate.com/worldclock/converter.html?p1=234&p2=43&p3=136&p4=195&p5=33&p6=248&p7=5&p8=240">world clock</a>)
+                  <b>07:00 Pacific time</b>
                 </dd>
               </dl>
 
