Add WebCodecs to the home page

--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
             <li>
               <a href="https://w3c.github.io/picture-in-picture/">Picture-in-picture</a>
             </li>
+            <li>
+              <a href="https://w3c.github.io/webcodecs/">WebCodecs</a>
+            </li>
           </ul>
         </nav>
         <div class="w3c_mainCol">
@@ -312,6 +315,9 @@
 
                 <dt><a href="https://github.com/w3c/picture-in-picture/">w3c/picture-in-picture</a> / <a href="https://github.com/w3c/picture-in-picture/issues">issues</a></dt>
                 <dd>Repository of the Picture-in-picture specification</dd>
+                
+                <dt><a href="https://github.com/w3c/webcodecs/">w3c/webcodecs</a> / <a href="https://github.com/w3c/webcodecs/issues">issues</a></dt>
+                <dd>Repository of the WebCodecs specification</dd>
               </dl>
 
               <p>Notes get taken during meetings on IRC: <a href="irc://irc.w3.org:6665#mediawg">irc.w3.org:6665#mediawg</a> / <a href="http://irc.w3.org/?channels=#mediawg">IRC web client</a></p>
