--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 The chairs of the Media Working Group are:
               </p>
               <ul class="show_items">
-                <li>Mounir Lamouri (Google)</li>
+                <li>Chris Needham (BBC)</li>
                 <li>Jer Noble (Apple)</li>
               </ul>
               <p>
