Link to new charter and update chair

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <ul class="theme">
             <li>
               <a href=
-              "https://www.w3.org/2021/07/media-wg-charter.html">Charter</a>
+              "https://www.w3.org/2023/06/media-wg-charter.html">Charter</a>
             </li>
             <li>
               <a href=
@@ -230,7 +230,7 @@
                 The goal of the Media Working Group is to develop and improve
                 client-side media processing and playback features on the Web.
                 Learn more about the <a href=
-                "https://www.w3.org/2021/07/media-wg-charter.html">goals,
+                "https://www.w3.org/2023/06/media-wg-charter.html">goals,
                 scope, and deliverables</a>.
               </p>
             </article>
@@ -240,8 +240,8 @@
                 The chairs of the Media Working Group are:
               </p>
               <ul class="show_items">
+                <li>Marcos Caceres (Apple)</li>
                 <li>Chris Needham (BBC)</li>
-                <li>Jer Noble (Apple)</li>
               </ul>
               <p>
                 The W3C Team Contact for the Media Working Group is
@@ -398,7 +398,7 @@
           </ul>
         </div><!-- #footer address / page signature -->
         <p class="copyright">
-          <a href="https://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> © 2019
+          <a href="https://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> © 2023
           <a href="https://www.w3.org/"><abbr title="World Wide Web Consortium">W3C</abbr></a><sup>®</sup>
           ( <a href="https://www.csail.mit.edu/"><abbr title="Massachusetts Institute of Technology">MIT</abbr></a>,
           <a href="https://www.ercim.eu/"><abbr title="European Research Consortium for Informatics and Mathematics">ERCIM</abbr></a>,
