--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
               <a href="https://github.com/w3c/autoplay/">Autoplay Policy Detection</a>
             </li>
             <li>
+              <a href="https://github.com/w3c/audio-session/">Audio Session</a>
+            </li>
+            <li>
               <a href="https://w3c.github.io/encrypted-media/">Encrypted Media Extensions (EME)</a>
             </li>
             <li>
